--- a/views/src/main/res/values/colors.xml
+++ b/views/src/main/res/values/colors.xml
@@ -3,5 +3,5 @@
     <color name="button_ripple">#64000000</color>
     <color name="button_default">#2ecc71</color>
     <color name="button_press">#31000000</color>
-
+    <color name="edit_text_active">#ffb932</color>
 </resources>
