--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,5 +42,11 @@
         android:id="@+id/btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+    <com.zarinpal.libs.views.ZarinPinView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:zp_hasPassword="false"
+        app:zp_maxLen="2"
+        />
 
 </LinearLayout>
