--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,4 +58,17 @@
         app:zp_pinCount="6"
         app:zp_widthItem="15dp" />
 
+
+    <com.zarinpal.libs.views.ZarinPanTextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:padding="10dp"
+        android:textColor="#484848"
+        app:zp_backgroundNumber="@drawable/bg_pan"
+        app:zp_fontFace="iransans_bold"
+        app:zp_margin_item="5dp"
+        app:zp_setCardNumber="8237-8238-4861-8461"
+        app:zp_textSize="13sp" />
+
 </LinearLayout>
