--- a/views/src/main/res/values/colors.xml
+++ b/views/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="button_default">#2ecc71</color>
     <color name="button_press">#31000000</color>
     <color name="edit_text_active">#ffb932</color>
+    <color name="color_pan_number">#363636</color>
 </resources>
