--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center_horizontal"
-    android:orientation="vertical"
-    android:padding="20dp"
-    tools:context="com.zarinpal.views.MainActivity">
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:gravity="center_horizontal"
+              android:orientation="vertical"
+              android:padding="20dp"
+              tools:context="com.zarinpal.views.MainActivity">
 
 
     <com.zarinpal.libs.views.ZarinTextView
@@ -16,7 +16,7 @@
         android:text="1000"
         android:textSize="30dp"
         app:zp_fontFace="iran_sans_light"
-        app:zp_textFormat="currency" />
+        app:zp_textFormat="currency"/>
 
     <com.zarinpal.libs.views.ZarinButton
         android:layout_width="wrap_content"
@@ -29,22 +29,22 @@
         app:zp_fontFace="iransans_bold"
         app:zp_pressColor="#0f0"
         app:zp_rippleColor="#ff0"
-        app:zp_secondColor="@color/colorPrimary" />
+        app:zp_secondColor="@color/colorPrimary"/>
 
     <com.zarinpal.libs.views.ZarinEditText
         android:id="@+id/edt_zarin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:zp_padding_right_icon="5dp"
-        app:zp_rightIcon="@drawable/ic_account"
         app:zp_leftFirstIcon="@drawable/ic_account"
         app:zp_padding_left_first_icon="10dp"
-        app:zp_type="currency" />
+        app:zp_padding_right_icon="5dp"
+        app:zp_rightIcon="@drawable/ic_account"
+        app:zp_type="currency"/>
 
     <Button
         android:id="@+id/btn"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"/>
 
     <com.zarinpal.libs.views.SectionEditText
         android:id="@+id/edt_password"
@@ -59,7 +59,7 @@
         app:zp_backgroundDrawable="@drawable/dash_drawable"
         app:zp_heightItem="30dp"
         app:zp_pinCount="6"
-        app:zp_widthItem="15dp" />
+        app:zp_widthItem="15dp"/>
 
 
     <com.zarinpal.libs.views.ZarinPanTextView
@@ -72,6 +72,19 @@
         app:zp_fontFace="iransans_bold"
         app:zp_margin_item="5dp"
         app:zp_setCardNumber="8237-8238-4861-8461"
-        app:zp_textSize="13sp" />
+        app:zp_textSize="13sp"/>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/test"
+        android:clickable="true"
+        android:background="?attr/selectableItemBackground">
+
+        <com.zarinpal.libs.views.ZarinTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="HelOOoooOOOOo"/>
+    </LinearLayout>
 
 </LinearLayout>
