--- a/views/src/main/res/layout/zarin_edit_text.xml
+++ b/views/src/main/res/layout/zarin_edit_text.xml
@@ -2,7 +2,8 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="60dp">
+    android:minHeight="60dp"
+    android:layout_height="wrap_content">
 
     <FrameLayout
         android:id="@+id/frm_right_icon"
